split out anvil setup

--- a/prelab_setup_AnVIL.Rmd
+++ b/prelab_setup_AnVIL.Rmd
@@ -1,24 +1,3 @@
-# Pre-lab: Set up AnVIL
+# Pre-lab
 
-Welcome!  This lab will introduce you to some basic data analysis using the [R programming language](https://www.r-project.org/).  In order to do this, there are a few steps you need to complete so that you can access the material and be ready to start computing with R on AnVIL.
-
-## Set up AnVIL Account
-
-```{r, echo = FALSE, results='asis'}
-cow::borrow_chapter(
-  doc_path = "child/_child_student_create_account.Rmd",
-  repo_name = "jhudsl/AnVIL_Template"
-)
-```
-
-## Access Materials (Clone Workspace)
-
-```{r, echo = FALSE, results='asis'}
-#workspace_name <- "Example_Workspace"
-#workspace_link <- "http://example.com/"
-billing_project <- "provided by your instructor"
-cow::borrow_chapter(
-  doc_path = "child/_child_student_workspace_clone.Rmd",
-  repo_name = "jhudsl/AnVIL_Template"
-)
-```
+Welcome!  This lab will introduce you to some basic data analysis using the [R programming language](https://www.r-project.org/).  In order to do this, there are a few steps you need to complete so that you can access the material and be ready to start computing with R.
