--- a/01-instructor_guide.Rmd
+++ b/01-instructor_guide.Rmd
@@ -11,6 +11,22 @@ This exercise is designed to be used either
 
 The `swirl` lessons touch on several additional R commands and concepts beyond those mentioned in the learning objectives and provide a useful starting point for going deeper if you desire.  Additional `swirl` lessons can be found at the [swirl Course Network](http://swirlstats.com/scn/).
 
+## Lesson Plan  {-}
+
+| Activity | Time |
+| :-- | :- |
+| Introduction | 10 minutes |
+| Student Setup | 30 minutes* |
+| swirl Lessons | 1 hr 40 minutes |
+| Application - Explore a dataframe | 20 minutes |
+| *Optional Challenge Exercise* | 20 minutes |
+| Wrap-up | 5 minutes |
+
+\*Student setup:
+
+  - Most students will not take a full 30 minutes, but we have built in some buffer for anyone who gets stuck.  Students can proceed with the exercises on their own once they have finished setting up.
+  - Most of the setup steps can be completed ahead of time if desired.  We have provided a Pre-Lab with instructions in the Appendix.
+
 ## Computing Requirements {-}
 
 - RStudio
