--- a/01-instructor_guide.Rmd
+++ b/01-instructor_guide.Rmd
@@ -19,7 +19,7 @@ The `swirl` lessons touch on several additional R commands and concepts beyond t
 | Student Setup | 30 minutes* |
 | swirl Lessons | 1 hr 40 minutes |
 | Application - Explore a dataframe | 20 minutes |
-| *Optional Challenge Exercise* | 20 minutes |
+| *Optional Challenge Exercise* | *20 minutes* |
 | Wrap-up | 5 minutes |
 
 \*Student setup:
