--- a/01-instructor_guide.Rmd
+++ b/01-instructor_guide.Rmd
@@ -22,7 +22,7 @@ The `swirl` lessons touch on several additional R commands and concepts beyond t
 | *Optional Challenge Exercise* | *20 minutes* |
 | Wrap-up | 5 minutes |
 
-\*Student setup:
+\*Student Setup:
 
   - Most students will not take a full 30 minutes, but we have built in some buffer for anyone who gets stuck.  Students can proceed with the exercises on their own once they have finished setting up.
   - Most of the setup steps can be completed ahead of time if desired.  We have provided a Pre-Lab with instructions in the Appendix.
