--- a/01-instructor_guide.Rmd
+++ b/01-instructor_guide.Rmd
@@ -16,7 +16,7 @@ The `swirl` lessons touch on several additional R commands and concepts beyond t
 | Activity | Time |
 | :-- | :- |
 | Introduction | 10 minutes |
-| Student Setup | 30 minutes* |
+| Student Setup | 25 minutes* |
 | swirl Lessons | 1 hr 40 minutes |
 | Application - Explore a dataframe | 20 minutes |
 | *Optional Challenge Exercise* | *20 minutes* |
@@ -24,7 +24,7 @@ The `swirl` lessons touch on several additional R commands and concepts beyond t
 
 \*Student Setup:
 
-  - Most students will not take a full 30 minutes, but we have built in some buffer for anyone who gets stuck.  Students can proceed with the exercises on their own once they have finished setting up.
+  - Most students will not take the full time, but we have built in some buffer for anyone who gets stuck.  Students can proceed with the exercises on their own once they have finished setting up.
   - Most of the setup steps can be completed ahead of time if desired.  We have provided a Pre-Lab with instructions in the Appendix.
 
 ## Computing Requirements {-}
