--- a/01-instructor_guide.Rmd
+++ b/01-instructor_guide.Rmd
@@ -19,7 +19,7 @@ The `swirl` lessons touch on several additional R commands and concepts beyond t
 | Setup | 25 minutes* |
 | R Programming with `swirl` | 1 hr 40 minutes |
 | Explore `us_contagious_diseases` dataframe | 20 minutes |
-| *Optional Challenge Exercise*\*\** | *20 minutes* |
+| *Optional Challenge Exercise*\*\* | *20 minutes* |
 | Wrap-up | 5 minutes |
 
 \*Student Setup:
