remove header numbering

--- a/01-instructor_guide.Rmd
+++ b/01-instructor_guide.Rmd
@@ -39,7 +39,7 @@ The `swirl` lessons touch on several additional R commands and concepts beyond t
 
 This book provides instructions on how to set these up in the cloud using the [AnVIL platform](https://anvil.terra.bio/), so that your students will not need to install anything.  Depending on your needs, you might decide to run this activity on a different cloud provider, such [Posit Cloud](https://posit.cloud/) (formerly RStudio Cloud), or have your students install RStudio themselves.
 
-## Teaching on AnVIL
+## Teaching on AnVIL {-}
 
 The AnVIL (Analysis Visualization and Informatics Lab-space) platform is a cloud computing platform specially designed for analyzing biological data, and is used by scientists doing all sorts of biological research.
 
@@ -47,7 +47,7 @@ AnVIl can be an excellent way to introduce students to biological data analysis 
 
 If this is your first time using AnVIL (or first time using it for a course), the [AnVIL Instructor Guide](https://jhudatascience.org/AnVIL_Book_Instructor_Guide) provides a walkthrough of how to set up and teach a course or workshop on AnVIL.
 
-### Checklist and Timeframe
+### Checklist and Timeframe {-}
 
 Here is a [checklist](https://docs.google.com/document/d/1-HqQqH_qlkHwRua8-b92MyKQcEmcl0Nk37rSYqP49aw/edit) to help you keep track of the steps for setting up and teaching on AnVIL. Details about each of these steps can be found in the [AnVIL Instructor Guide](https://jhudatascience.org/AnVIL_Book_Instructor_Guide).  *Note that this checklist is written for workshop instructors as well as classroom instructors, so some of the "Event Setup" steps may not be applicable to you, depending on your teaching context.*
 
@@ -59,7 +59,7 @@ Here is a suggested timeframe for working through the checklist:
 - Start working through INSTRUCTOR SETUP.  It's a good idea to get billing figured out with plenty of time to spare
 - Do any necessary EVENT SETUP steps
 
-**1+ week before**
+**~1 week before**
 
 - Start working through RUNNING THE CLASS
 - If possible, have students log in to AnVIL and send you their usernames, so you can add them to the Student Group ahead of time.  This saves time on the day of the class.
